2009-06-29	The InnoDB Team

	* buf/buf0buf.c, buf/buf0rea.c, lock/lock0lock.c:
	Tolerate missing tablespaces during crash recovery and when
	printing information on locks.

2009-06-29	The InnoDB Team

	* buf/buf0buf.c:
	Fix a race condition when reading buf_fix_count.
	Currently, it is not being protected by the buffer pool mutex,
	but by the block mutex.

2009-06-29	The InnoDB Team

	* handler/handler0alter.cc:
	Start the user transaction prebuilt->trx if it was not started
	before adding or dropping an index.  Without this fix, the
	table could be locked outside an active transaction.

2009-06-25	The InnoDB Team

	* handler/ha_innodb.cc,
	mysql-test/innodb_bug42101.test,
	mysql-test/innodb_bug42101.result,
	mysql-test/innodb_bug42101-nonzero.test,
	mysql-test/innodb_bug42101-nonzero.result:
	Fix Bug#45749 Race condition in SET GLOBAL
	innodb_commit_concurrency=DEFAULT

2009-06-25	The InnoDB Team

	* dict/dict0dict.c:
	When an index column cannot be found in the table during index
	creation, display additional diagnostic before an assertion failure.
	This does NOT fix Bug #44571 InnoDB Plugin crashes on ADD INDEX,
	but it helps understand the reason of the crash.

2009-06-17	The InnoDB Team

	* row/row0merge.c:
	Fix Bug#45426 UNIV_DEBUG build cause assertion error at CREATE INDEX

2009-06-17	The InnoDB Team

	* mysql-test/innodb_bug45357.result, mysql-test/innodb_bug45357.test,
	row/row0mysql.c:
	Fix Bug#45357 5.1.35 crashes with Failing assertion: index->type &
	DICT_CLUSTERED

2009-06-17	The InnoDB Team

	* handler/ha_innodb.cc, mysql-test/innodb-autoinc.result,
	mysql-test/innodb-autoinc.test:
	Fix Bug#44030 Error: (1500) Couldn't read the MAX(ID) autoinc value
	from the index (PRIMARY)

2009-06-11	The InnoDB Team

	* handler/ha_innodb.cc, mysql-test/innodb.result, srv/srv0srv.c:
	Change the following defaults:
	max_dirty_pages_pct: from 90 to 75, max allowed from 100 to 99
	additional_mem_pool_size: from 1 to 8 MB
	buffer_pool_size: from 8 to 128 MB